--- a/ShoppingProject/templates/signup.html
+++ b/ShoppingProject/templates/signup.html
@@ -95,52 +95,57 @@
 
 
 </pre>
-<section class="signin-page account">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <div class="block text-center">
-          <a class="logo" href="">
-            <img src="{% static 'images/logo.png' %}" alt="logo">
-          </a>
-              {% if error %}
+<table align="center" style="background-color: #ffffff ">
+    <tr>
+        <th style="border:#f7f5f5 1.3cm  solid" width="550px">
+         &nbsp;&nbsp;&nbsp;&nbsp;  <img src="{% static 'online-shopping.png' %}" width="80" height="80"> <a class="navbar-brand" href="#"><span >Quick Shoppieee Store</span></a>
+
+
+
+<br><br>
+  <div class="form-group mx-sm-3 mb-2">
+   <h3 class="text-center">Welcome Back To Regestration</h3> <br><br>
+ {% if error %}
             <p style="color: #ff5f2a">Username is Already Exist...Lets Try With An Another Username</p>
             {% endif %}
-
-
           <form class="text-left clearfix" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
 
              <div class="form-group">
+                 <span >Mobile  </span> <br><br>
               <input type="text" class="form-control" required name="mob" placeholder="Mobile">
             </div>
              <div class="form-group">
+                  <br><br>
               <input type="file"  required name="img">
             </div>
             <div class="form-group">
+                <span >Username  </span> <br><br>
               <input type="text" class="form-control"   required name="user" placeholder="Username">
             </div>
             <div class="form-group">
+                <span >Email  </span> <br><br>
               <input type="email" class="form-control" required name="email" placeholder="Email">
             </div>
             <div class="form-group">
+                <span >Password  </span> <br><br>
               <input type="password" class="form-control"  required name="pwd"  placeholder="Password">
             </div>
             <div class="form-group">
-             <textarea name="add" placeholder="Your Address"  required class="form-control"></textarea>
+                <span >Address </span> <br><br>
+             <textarea name="add" placeholder="Your Address"  required class="form-control"></textarea><br>
             </div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary">Sign In</button>
-            </div>
+              <div align="center"><button style="border-radius: 0.8cm" type="submit" class="btn btn-outline-warning">Confirm identity</button></div>
+<p class="mt-3">Already have a Account ?<a href="{% url 'login_signin' %}"> <span >Login</span></a></p>
           </form>
-          <p class="mt-3">Already hava an account ?<a href="{% url 'login_signin' %}"> Login</a></p>
+  </div><br><br>
 
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
+
+        </th>
+    </tr>
+</table>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
