--- a/ShoppingProject/templates/nabs.html
+++ b/ShoppingProject/templates/nabs.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Doctor Dentals</title>
+    <title>Quick Shoppiee</title>
   </head>
   <body  >
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -82,13 +82,17 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'login_signin' %}" tabindex="-1" >Login/Signup</a>
       </li>
+
       {% else %}
         <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >Logout</a>
       </li>
         {% endif %}
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >{{ request.user.username }}</a>
+        <a class="nav-link" href="" tabindex="-1" >{{ request.user.username }}</a>
+      </li>
+     <li class="nav-item">
+
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -96,6 +100,12 @@
       <button style="border-radius: 0.8cm;" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
+
+ {% if request.user.is_authenticated %}
+      <div class="cart">
+          <a href="{% url 'view_cart' %}" ><button id="cartOpen" class="btn btn-outline-warning" style="border-radius: 0.8cm " ><i class="ti-bag"></i><span class="d-xs-none"> <img src="{% static 'carts.png' %}"  width="30px" height="30px" ></span> {{ request.user.addtocartmodel_set.count }}</button></a>
+      </div>
+      {% endif %}
 </nav>
 
 
