--- a/ShoppingProject/templates/formen.html
+++ b/ShoppingProject/templates/formen.html
@@ -55,7 +55,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
           </ul>
           <div class="px-4 py-3 border-top">
             <h4 class="d-inline-block mb-0 mt-1">Clothing</h4>
-            <a href="{% url 'shirts' %}" class="btn btn-sm btn-outline-primary float-right">view more</a>
+            <a href="{% url 'formal' %}" style="text-decoration: none" class="btn btn-sm btn-outline-primary float-right">view more</a>
           </div>
         </div>
       </div>
