--- a/ShoppingProject/templates/nabs.html
+++ b/ShoppingProject/templates/nabs.html
@@ -78,14 +78,15 @@
 
         </div>
       </li>
-          {% if not request.user.is_authenticated %}
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'login_signin' %}" tabindex="-1" >Login/Signup</a>
+          {% if  request.user.is_authenticated %}
+
+                 <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >Logout</a>
       </li>
 
       {% else %}
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >Logout</a>
+       <li class="nav-item">
+        <a class="nav-link" href="{% url 'login_signin' %}" tabindex="-1" >Login/Signup</a>
       </li>
         {% endif %}
     <li class="nav-item">
