--- a/ShoppingProject/templates/search.html
+++ b/ShoppingProject/templates/search.html
@@ -19,7 +19,7 @@
 body{
     border-top: solid 5px #999;
 
-background: no-repeat center center fixed ;
+background:url("{% static 'shopping.jpg' %}") no-repeat center center fixed ;
   background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -46,10 +46,8 @@ background: no-repeat center center fixed ;
   <div class="container">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'categires' %}">Categireis</a></li>
-          <li class="breadcrumb-item active" aria-current="page">{% for res in res %}{{  res.product_for }} {% endfor %}</li>
+    <li class="breadcrumb-item"><a href="">Search</a></li>
 
-      <li class="breadcrumb-item active" aria-current="page">{% for res in res %}{{  res.product_categire }} {% endfor %}</li>
     </ol>
   </div>
 </nav>
@@ -58,67 +56,42 @@ background: no-repeat center center fixed ;
 
 <!-- shop -->
  <!-- product-list -->
-
 <pre>
-
 
 
 
 </pre>
+{% for res in search %}
+
+    <table align="">
+        <tr>
+            <th>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <img src="{{ res.product_image.url }}"><br><br><hr>
+
+            </th>
+             <th>
+                 <h4> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ res.product_name }}&nbsp;&nbsp;{{ res.product_categire }}</h4>
+                 <h4>
+                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ res.product_price }} Bucks/-<br><br>
+                 </h4>
 
 
- {% for res in res %}
-<form action="{% url 'add_to_cart' res.product_id %}" method="post">
-    {% csrf_token %}
-<table align="center">
-    <tr>
-        <th width="450px">
+                  <div>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'buy_product' %}?pname={{ res.product_name }}&pprice={{ res.product_price }}&pimage={{ res.product_image }}">   <button type="submit" style="color: darkgray;border-radius: 0.8cm" class="btn btn-outline-warning" >Know More</button>
+                  </a>
+                <div >
 
-             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brand :-<span style="color: red;font-size: 20px">{{ res.product_name }} {{ res.product_categire }}</span> </i></b><br><br>
-           <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Price :- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="color: red;font-size: 20px"> {{ res.product_price }} Bucks</span>&nbsp;&nbsp;  Quantity <input type="number" name="pquantity" required> </i></b><br><br>
-            <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Stock :-  &nbsp;&nbsp;&nbsp; <span style="color: red;font-size: 20px">{{ res.current_status }}</span></i></b><br><br>
-             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;For  :-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: red;font-size: 20px"> {{ res.product_for }}</span> </i></b><br><br>
-             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stock Available Upto :- &nbsp;&nbsp;&nbsp;  <span style="color: red;font-size: 20px"> {{ res.valid_upto }} Years</span>  </i></b><br><br>
-                             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Original Size  :- &nbsp;&nbsp;&nbsp;  <span style="color: red;font-size: 20px"> {{ res.sizes }} </span><br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Your Size :-
-
-      <input type="text" name="size" required >
-
- </i></b><br><br>
-
-        </th>
-           <th width="450px">
-
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ res.product_image.url }}" style="border-radius: 0.9cm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-        </th>
-        <th width="450px">
-            <b><i><span > Product Description  :-</span> &nbsp;&nbsp;&nbsp;  <span style="color: red;font-size: 20px"> {{ res.product_description }} </span>  </i></b><br><br>
-
-            <input type="hidden" value="{{ res.product_price }}" name="price">
+            </th>
+        </tr>
+    </table>
+    {% endfor %}
 
 
-        </th>
-
-    </tr>
-<tr >
-   <th align="left" >
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="submit" style="color: darkgray;border-radius: 0.8cm" class="btn btn-outline-warning" >&nbsp;&nbsp;&nbsp; Add To Cart&nbsp;&nbsp;&nbsp;</button><br><br>
-
-   </th>
-</tr>
-     <tr>
-         <th><br><br><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;------- Hurry Up Sale Ends Soon<br><br>
-             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Countdown Is Started-------</h5></th>
-     </tr>
-</table>
-</form>
-     {% endfor %}
-<div align="center">
-{% if message %}
-{{ message }}
-{% endif %}
-</div>
 <pre>
+
+
+
+
 
 
 
